--- a/grafos.qmd
+++ b/grafos.qmd
@@ -10,7 +10,12 @@ Neste projeto iremos trabalhar com grafos.
 
 
 :::{.subexample}
-O [grafo de Petersen](http://pt.wikipedia.org/wiki/Grafo_de_Petersen)é um grafo com muitas  propriedades interessantes. O grafo de Petersen pode
+O [grafo de Petersen](http://pt.wikipedia.org/wiki/Grafo_de_Petersen) é um grafo com muitas  propriedades interessantes. 
+
+
+![Petersen graph](pics/Petersen1_tiny.svg)
+
+O grafo de Petersen pode
 ser construído como o grafo com o conjunto de vértices 
 $$
 V=\{\{x,y\}\mid 1\leq x<y\leq 5\}
@@ -28,23 +33,12 @@ gap> ver := Combinations( [1..5], 2 );
 
 
 O conjunto de vértices de um grafo em `GAP` tem de ser uma lista `[1..k]`. No nosso caso, o conjunto de vértices será `[1..10]`. Dois vértices `i` e `j`
-serão conexos se `Intersection( ver[i], ver[j] ) = []`.
+serão conectados se `Intersection( ver[i], ver[j] ) = []`.
 
 ```matlab
-gap> ares := [];
-gap> for i in [1..10] do
-> for j in [1..10] do
-> if Intersection( ver[i], ver[j] ) = [] then
-> Add( ares, [i,j] );
-> fi;
-> od;
-> od;
-gap> ares;
-[ [ 1, 8 ], [ 1, 9 ], [ 1, 10 ], [ 2, 6 ], [ 2, 7 ], [ 2, 10 ], [ 3, 5 ], 
-  [ 3, 7 ], [ 3, 9 ], [ 4, 5 ], [ 4, 6 ], [ 4, 8 ], [ 5, 3 ], [ 5, 4 ], 
-  [ 5, 10 ], [ 6, 2 ], [ 6, 4 ], [ 6, 9 ], [ 7, 2 ], [ 7, 3 ], [ 7, 8 ], 
-  [ 8, 1 ], [ 8, 4 ], [ 8, 7 ], [ 9, 1 ], [ 9, 3 ], [ 9, 6 ], [ 10, 1 ], 
-  [ 10, 2 ], [ 10, 5 ] ]
+gap> ares := Filtered( Tuples( [1..10], 2 ), x->Intersection( ver[x[1]], ver[x[2]] ) = [] );
+[ [ 1, 8 ], [ 1, 9 ], [ 1, 10 ], [ 2, 6 ], [ 2, 7 ], [ 2, 10 ], [ 3, 5 ], [ 3, 7 ], [ 3, 9 ], [ 4, 5 ], [ 4, 6 ], [ 4, 8 ], [ 5, 3 ], 
+  [ 5, 4 ], [ 5, 10 ], [ 6, 2 ], [ 6, 4 ], [ 6, 9 ], [ 7, 2 ], [ 7, 3 ], [ 7, 8 ], [ 8, 1 ], [ 8, 4 ], [ 8, 7 ], [ 9, 1 ], [ 9, 3 ], [ 9, 6 ], [ 10, 1 ], [ 10, 2 ], [ 10, 5 ] ]
 ```
 
 Para construir o grafo de Petersen, nós precisamos do pacote GRAPE de `GAP`. O grafo vai ser construído pela função
