--- a/index.qmd
+++ b/index.qmd
@@ -1,23 +1,39 @@
-# MiniCursoGAP
+# MiniCursoGAP {.unnumbered}
 
 Este material foi preparado para o minicurso de *Álgebra Computacional com GAP* que foi realizado na [XXVII Escola de Álgebra](https://algebra2024.ime.usp.br/index.php) em São Paulo (2024). Durante as 5 sessões do minicurso, os participantes trabalham individualmente ou em pares em vários pequenos projetos com o objetivo de explorar as várias funcionalidades do [sistema computacional `GAP`](www.gap-system.org). Os projetos representem vários níveis de habilidade matemática e computacional.
 
 - Rodar o sistema, criar, salvar e carregar arquivos
+
+## Projetos para iniciantes {.unnumbered}
+
+Os seguintes projetos são recomendados para participantes que têm pouca (ou nenhuma) experiência com sistemas computacionais e linguagens de programação.
+
 - [Aritmética básica, variáveis, funções](arith.qmd)
 - [Listas, matrizes, permutações](list_mat_perm.qmd)
 - [O primeiro encontro com grupos](estrut.qmd)
 - [A linguagem de programação](ling.qmd)
+
+## Projetos elementares {.unnumbered}
+
+Os seguintes projetos são recomendados para participantes que têm experiência com sistemas computacionais e/ou linguagens de programação e gostariam de explorar alguns problemas envolvendo matemática básica (por exemplo aritmética modular).
+
+
 - [Os números de Erdős-Woods](erdos_woods.qmd)
 - [A Conjetura de Collatz](collatz.qmd)
 - [Números perfeitos, abundantes, e sequências alíquotas](aliquot.qmd)
 - [Criptografia RSA](rsa.qmd)
+
+## Projetos mais avançados {.unnumbered}
+
+Os seguintes projetos precisam de conhecimento da linguágem de programação e também algum conhecimento de álgebra abstrata, tais como grupos, anéis, álgebras, etc.
+
 - [Comutadores de grupos](commutators.qmd)
 - [Grupos livres, homomorfismos, Exploração do cubo mágico](cubo.qmd)
 - [Uma exploração dos centralizadores](centralizers.qmd)
 - [Homomorfismos, automorfismos, de grupos](semidirect.qmd)
 - [Carateres de um grupo e a ordem generalizada](genord.qmd)
+- [Um problema de geometria plana usando álgebra comutativa](groebner1.qmd)
 - [Álgebras associativas](algebras.qmd)
-- [Um problema de álgebra comutativa](groebner1.qmd)
 - [Dependência algébrica de polinômios](groebner.qmd)
 - [Teoria de grafos](grafos.qmd)
   
